--- a/views/base2.html
+++ b/views/base2.html
@@ -9,6 +9,7 @@
 
     <title>Dashboard for EB</title>
 
+    <link rel="stylesheet" href="../static/css/summernote-bs4.css">
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="../static/css/bootstrap.css">
 
@@ -16,6 +17,7 @@
     <link rel="stylesheet" href="../static/css/dashboard.css">
 
     <script src="../static/js/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.js"></script>
     <script src="../static/js/bootstrap.js"></script>
     
     <script>
