--- a/views/home.html
+++ b/views/home.html
@@ -461,12 +461,12 @@
                             新建
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="/addArchive">
-                            <span data-feather="file"></span>
+                            <span data-feather="archive"></span>
                             新建资讯
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </nav>
