--- a/views/addBook.html
+++ b/views/addBook.html
@@ -24,18 +24,18 @@
                 bookAudio: ''
             },
             methods: {
-                isDate: function (str){
-                    var reg=/^(\d{4})-(\d{2})-(\d{2})$/;
-                    if (str=='') {
+                isDate: function (str) {
+                    var reg = /^(\d{4})-(\d{2})-(\d{2})$/;
+                    if (str == '') {
                         return false;
                     }
-                    var arr=reg.exec(str);
+                    var arr = reg.exec(str);
 
-                    if(!reg.test(str) || parseInt(RegExp.$2)>=12 || parseInt(RegExp.$3)>=31){
+                    if (!reg.test(str) || parseInt(RegExp.$2) >= 12 || parseInt(RegExp.$3) >= 31) {
                         return false;
                     }
                     return true;
-                },          
+                },
 
                 sendForm: function (postData) {
                     var that = this;
@@ -57,13 +57,16 @@
                             return;
                         }
                     }
-                    
+
                     // AJAX提交JSON:
                     vm.postData.thumbnail_url = vm.bookImg;
                     vm.postData.txt_url = vm.bookFile;
                     // if ($('#book_type').val() == '听书') {
                     //     vm.postData.audio_url = vm.bookAudio;
                     // }
+                    if ($('#book_type').val() == '资讯') {
+                        vm.postData.htmlText = $('#summernote').summernote('code');
+                    }
                     $.ajax({
                         type: 'post',
                         headers: {
@@ -106,7 +109,7 @@
         $("#category").change(function () {
             $('#category').css("border-color", "");
         });
-        
+
         $("#book_type").change(function () {
             $('#book_type').css("border-color", "");
             if ($('#book_type').val() == '小说' || $('#book_type').val() == '请选择...') {
@@ -133,7 +136,6 @@
                     placeholder: '资讯内容...',
                     tabsize: 2,
                     height: 500,
-                    focus: true,
                     toolbar: [
                         ['style', ['style']],
                         ['font', ['bold', 'underline', 'clear']],
@@ -145,8 +147,36 @@
                         ['insert', ['link', 'picture', 'video']],
                         ['view', ['undo', 'redo', 'codeview', 'help']]
                     ],
-                    lang: 'zh-CN'
-                }); 
+                    lang: 'zh-CN',
+                    callbacks: {
+                        onImageUpload: function (files) {
+                            var $files = $(files);
+                            $files.each(function () {
+                                var file = this;
+                                var data = new FormData();
+                                data.append("file", file);
+                                $.ajax({
+                                    type: "POST",
+                                    url: 'uploadFile',
+                                    cache: false,
+                                    contentType: false,
+                                    processData: false,
+                                    data: data
+                                }).done(function (res) {
+                                    if (res.code == 0) {
+                                        var imageUrl = 'images/' + res.data;
+                                        $('#summernote').summernote('insertImage', imageUrl, function ($image) { });
+                                    } else {
+                                        $('#myModel').modal('show');
+                                        $('#myModel').find('.modal-body').text(res.msg);
+                                    }
+                                }).fail(function (jqXHR, textStatus) {
+                                    alert('Error: ' + jqXHR.status);
+                                });
+                            });
+                        }
+                    }
+                });
             }
         });
 
@@ -162,15 +192,18 @@
             } else if ($('#thumbnail').val() == '') {
                 $('#myModel').modal('show');
                 $('#myModel').find('.modal-body').text('请添加图书封面图');
-            } else if ($('#txtFile').val() == '') {
+            } else if ($('#txtFile').val() == '' && $('#book_type').val() != '资讯') {
                 $('#myModel').modal('show');
                 $('#myModel').find('.modal-body').text('请添加图书txt文件');
+            } else if ($('#book_type').val() == '资讯' && $('#summernote').summernote('isEmpty')) {
+                $('#myModel').modal('show');
+                $('#myModel').find('.modal-body').text('资讯内容不能为空');
             }
             // else if ($('#book_type').val() == '听书' && $('#audioFile').val() == '') {
             //     $('#myModel').modal('show');
             //     $('#myModel').find('.modal-body').text('请添加图书音频文件');
             // } 
-             else {
+            else {
                 $('#myLoading').show();
                 $('#createBtn').attr('disabled', true);
                 vm.postData = {
@@ -193,7 +226,9 @@
                 if (wordsNum.length > 0) {
                     vm.postData.words_num = wordsNum;
                 }
-                $('#txtFile').fileinput('upload');
+                if ($('#book_type').val() != '资讯') {
+                    $('#txtFile').fileinput('upload');
+                }
                 $('#thumbnail').fileinput('upload');
                 // if ($('#book_type').val() == '听书') {
                 //     $('#audioFile').fileinput('upload');
@@ -324,8 +359,6 @@
         //     vm.bookAudio = data.response.data;
         //     vm.sendForm(vm.postData);
         // });
-
-
     });
 </script>
 
@@ -361,7 +394,7 @@
 
             <div class="container">
                 <div class="col">
-                    <div class="col-md-8">
+                    <div class="col-md-10">
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h1 class="panel-title">
@@ -386,7 +419,8 @@
                                         </div>
                                         <div class="form-group col-md-4">
                                             <label class="col-form-label">出版时间(可选)</label>
-                                            <input type="text" maxlength="10" id='publisher_date' name="publisher_date" class="form-control" placeholder="例：2018-02-26" value="">
+                                            <input type="text" maxlength="10" id='publisher_date' name="publisher_date" class="form-control" placeholder="例：2018-02-26"
+                                                value="">
                                         </div>
                                         <div class="form-group col-md-4">
                                             <label class="col-form-label">字数(可选)</label>
@@ -403,6 +437,7 @@
                                                 <option>经济管理</option>
                                                 <option>人物传记</option>
                                                 <option>青春言情</option>
+                                                <option>新闻资讯</option>
                                             </select>
                                         </div>
                                         <div class="form-group col-md-6">
@@ -431,12 +466,12 @@
                                     </div>
                                     <div class="form-group">
                                         <label class="col-form-label">简介</label>
-                                        <textarea class="form-control" maxlength="500" placeholder="字数最多500" style="resize: vertical;" id="introduction" rows="3" required></textarea>
+                                        <textarea class="form-control" maxlength="500" placeholder="字数最多500" style="resize: vertical;" id="introduction" rows="3"
+                                            required></textarea>
                                     </div>
                                     <div class="form-group" id="archive" style="display: none;">
-                                        <label class="col-form-label">资讯网页内容</label>
-                                        <div id="summernote">
-                                        </div>
+                                        <label class="col-form-label">资讯内容</label>
+                                        <div id="summernote"></div>
                                     </div>
                                     <div class="form-group">
                                         <button type="submit" id="createBtn" class="btn btn-primary" data-loading-text="提交中...">创建</button>
@@ -454,5 +489,4 @@
 </div>
 
 <link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote.css" rel="stylesheet">
-<script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote.js"></script>
-{% endblock %}
+<script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote.js"></script> {% endblock %}
