--- a/views/addBook.html
+++ b/views/addBook.html
@@ -488,5 +488,4 @@
     </div>
 </div>
 
-<link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote.css" rel="stylesheet">
-<script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote.js"></script> {% endblock %}
+{% endblock %}
