--- a/views/addBook.html
+++ b/views/addBook.html
@@ -164,7 +164,7 @@
                                     data: data
                                 }).done(function (res) {
                                     if (res.code == 0) {
-                                        var imageUrl = 'images/' + res.data;
+                                        var imageUrl = '../images/' + res.data;
                                         $('#summernote').summernote('insertImage', imageUrl, function ($image) { });
                                     } else {
                                         $('#myModel').modal('show');
