delete code: about audio file

--- a/views/addBook.html
+++ b/views/addBook.html
@@ -20,8 +20,7 @@
             data: {
                 postData: null,
                 bookFile: '',
-                bookImg: '',
-                bookAudio: ''
+                bookImg: ''
             },
             methods: {
                 isDate: function (str) {
@@ -39,15 +38,6 @@
 
                 sendForm: function (postData) {
                     var that = this;
-                    // if ($('#book_type').val() == '听书') {
-                    //     if (that.bookAudio.length == 0 || that.bookFile.length == 0 || that.bookImg.length == 0) {
-                    //         return;
-                    //     }
-                    // } else {
-                    //     if (that.bookFile.length == 0 || that.bookImg.length == 0) {
-                    //         return;
-                    //     }
-                    // }
                     if ($('#book_type').val() == '资讯') {
                         if (that.bookImg.length == 0) {
                             return;
@@ -61,9 +51,6 @@
                     // AJAX提交JSON:
                     vm.postData.thumbnail_url = vm.bookImg;
                     vm.postData.txt_url = vm.bookFile;
-                    // if ($('#book_type').val() == '听书') {
-                    //     vm.postData.audio_url = vm.bookAudio;
-                    // }
                     if ($('#book_type').val() == '资讯') {
                         vm.postData.htmlText = $('#summernote').summernote('code');
                     }
@@ -113,23 +100,18 @@
         $("#book_type").change(function () {
             $('#book_type').css("border-color", "");
             if ($('#book_type').val() == '小说' || $('#book_type').val() == '请选择...') {
-                $('#audio_group').hide();
                 $('#archive').hide();
                 $('#txtFileForm').show();
             } else if ($('#book_type').val() == '听书') {
-                // $('#audio_group').show();
                 $('#archive').hide();
                 $('#txtFileForm').show();
             } else if ($('#book_type').val() == '杂志') {
-                $('#audio_group').hide();
                 $('#archive').hide();
                 $('#txtFileForm').show();
             } else if ($('#book_type').val() == '漫画') {
-                $('#audio_group').hide();
                 $('#archive').hide();
                 $('#txtFileForm').show();
             } else if ($('#book_type').val() == '资讯') {
-                $('#audio_group').hide();
                 $('#txtFileForm').hide();
                 $('#archive').show();
                 $('#summernote').summernote({
@@ -199,10 +181,6 @@
                 $('#myModel').modal('show');
                 $('#myModel').find('.modal-body').text('资讯内容不能为空');
             }
-            // else if ($('#book_type').val() == '听书' && $('#audioFile').val() == '') {
-            //     $('#myModel').modal('show');
-            //     $('#myModel').find('.modal-body').text('请添加图书音频文件');
-            // } 
             else {
                 $('#myLoading').show();
                 $('#createBtn').attr('disabled', true);
@@ -230,9 +208,6 @@
                     $('#txtFile').fileinput('upload');
                 }
                 $('#thumbnail').fileinput('upload');
-                // if ($('#book_type').val() == '听书') {
-                //     $('#audioFile').fileinput('upload');
-                // }
             }
         });
 
@@ -317,48 +292,6 @@
             vm.bookImg = data.response.data;
             vm.sendForm(vm.postData);
         });
-
-        // audio
-        // $('#audioFile').fileinput({
-        //     showUpload: false,
-        //     previewFileType: 'any',
-        //     showPreview: false,
-        //     uploadUrl: 'uploadFile',
-        //     language: 'zh',
-        //     browseLabel: '浏览...',
-        //     browseClass: 'btn btn-outline-secondary',
-        //     removeClass: 'btn btn-danger',
-        //     allowedFileTypes: ['audio'], // 限制文件类型为图片
-        //     allowedFileExtensions: ['audio'], // 限制文件后缀名为['image', 'html', 'text', 'video', 'audio', 'flash', 'object']
-        //     maxFileCount: 1,  // 限制最多3张图片
-        //     // maxFileSize: 1024, // 限制图片大小，最大1024KB
-        //     // allowedPreviewTypes: ['image'], // 允许预览的文件类型
-        //     initialCaption: '添加图书音频文件', // 初始化说明框框，比如该项目上默认显示：可以选择最多3张图片，格式为png或者jpg，大小不超过1M
-        //     layoutTemplates: {
-        //         main1: '{preview}\n' +
-        //             '<div class="input-group {class}">\n' +
-        //             '   <div class="input-group-prepend">\n' +
-        //             '       {browse}\n' +
-        //             '       {remove}\n' +
-        //             '   </div>\n' +
-        //             '   {caption}\n' +
-        //             '</div>',
-        //         footer: '<div class="file-thumbnail-footer">\n' +
-        //             '    <div class="file-caption-name">{caption}{size}</div>\n' +
-        //             '</div>'
-        //     }
-        // });
-        // $('#audioFile').on('filecleared', function (event) {
-        //     $('#audioFile').fileinput('refresh', { caption: '添加图书音频文件' });
-        // });
-        // $('#audioFile').on('fileerror', function (event, data, msg) {
-        //     console.log(JSON.stringify(data) + '🌹🌹🌹🌹🌹' + JSON.stringify(msg));
-        // });
-        // $('#audioFile').on('fileuploaded', function (event, data, previewId, index) {
-        //     console.log("🌹🌹fileuploaded🌹🌹" + JSON.stringify(data.response));
-        //     vm.bookAudio = data.response.data;
-        //     vm.sendForm(vm.postData);
-        // });
     });
 </script>
 
@@ -452,10 +385,6 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <!-- <div class="form-group" id="audio_group" style="display: none;">
-                                        <label for="audioFile" class="col-form-label">音频文件</label>
-                                        <input type="file" class="form-control-file" name="file" id="audioFile" accept="audio/*">
-                                    </div> -->
                                     <div class="form-group">
                                         <label for="thumbnail" class="col-form-label">封面图片</label>
                                         <input type="file" class="form-control-file" name="file" id="thumbnail" accept="image/*">
